fixed spacing issue

--- a/sass/modules/_solution-cta.scss
+++ b/sass/modules/_solution-cta.scss
@@ -129,6 +129,7 @@
             width: 100%;
             clear: left;
             margin-bottom: 70px;
+            margin-left: 0;
         }
 
     }
